<resources>
    <string name="app_name">Terzulli File Manager</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <!-- App exsample default strings -->
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <!-- Menu Main strings -->
    <string name="action_settings">Settings</string>
    <string name="action_new_folder">New Folder</string>
    <string name="action_sort_by">Sort by…</string>
    <string name="action_select_all">Select all</string>
    <string name="action_deselect_all">Deselect all</string>
    <string name="action_copy_to">Copy to…</string>
    <string name="action_move_to">Move to…</string>
    <string name="action_compress">Compress</string>
    <string name="action_decompress">Decompress</string>
    <string name="action_get_info">Get info</string>
    <string name="action_show_hidden">Show hidden files</string>
    <string name="action_dont_show_hidden">Don\'t show hidden files</string>

    <!-- Activities Strings -->
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>